--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   </div>
 
-  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="https://code.jquery.com/jquery.js"></script>
   <script src="js/util.js"></script>
   <script src="js/arme.js"></script>
   <script src="js/perso.js"></script>
