--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <header>
       <h1>Jeu skyrim en tour par tour sur navigateur</br> Dovakhin versus Dragon</h1>
     </header>
-    <div id="map"></div>
+
+    <div id="map">
     <div id="joueur1" class="joueurClass">
       <div id="info1">
         <h2>Dragon</h2>
-        <p><img src="img/perso1_dragon.png"></img>
         <p>Santé : </p><span id="recapSante1" class="recapClass"></span>
         </br>
         <p>Dégats pouvoir : </p><span id="recapArme1" class="recapClass"></span>
@@ -26,16 +26,15 @@
         <p>Posture: </p><span id="recapPosture1" class="recapClass"></span>
         </br>
         <div id="joueur1Boutons" class="boutonClass" style="width: auto; ">
-          <img id="attaqueJoueur1" src="img/epee.png" alt="Icone d'attaque" style="width: 50px; margin: 50px; " />
-          <img id="defenseJoueur1" src="img/bouclier.png" alt="Icone de défense" style="width: 50px; margin: 50px;" />
-      </div>
-  
+          <img id="attaqueJoueur1" src="img/epee.png" alt="Icone d'attaque" />
+          <img id="defenseJoueur1" src="img/bouclier.png" alt="Icone de défense"/>
+        </div>
       </div>
     </div>
+
     <div id="joueur2" class="joueurClass">
       <div id="info2" class="infoClass">
         <h2>Dovakhiin</h2>
-        <p><img src="img/perso2_dovakhiin.png"></img>
         <p>Santé : </p><span id="recapSante2" class="recapClass"></span>
         </br>
         <p>Dégats pouvoir : </p><span id="recapArme2" class="recapClass"></span>
