--- a/index.html
+++ b/index.html
@@ -13,50 +13,54 @@
   <div id="jeu">
     <header>
       <h1>Jeu skyrim en tour par tour sur navigateur</br> Dovakhin versus Dragon</h1>
+      <div class="error">
+        <h1>Résolution d'écran non supporté, veuillez passer sur un format non mobile</h1>
+      </div>
     </header>
 
-    <div id="map">
-    <div id="joueur1" class="joueurClass">
-      <div id="info1">
-        <h2>Dragon</h2>
-        <p>Santé : </p><span id="recapSante1" class="recapClass"></span>
-        </br>
-        <p>Dégats pouvoir : </p><span id="recapArme1" class="recapClass"></span>
-        </br>
-        <p>Posture: </p><span id="recapPosture1" class="recapClass"></span>
-        </br>
-        <div id="joueur1Boutons" class="boutonClass" style="width: auto; ">
-          <img id="attaqueJoueur1" src="img/epee.png" alt="Icone d'attaque" />
-          <img id="defenseJoueur1" src="img/bouclier.png" alt="Icone de défense"/>
+
+    <div id="map" class="map">
+      <div id="joueur1" class="joueurClass">
+        <div id="info1">
+          <h2>Dragon</h2>
+          <p>Santé : </p><span id="recapSante1" class="recapClass"></span>
+          </br>
+          <p>Dégats pouvoir : </p><span id="recapArme1" class="recapClass"></span>
+          </br>
+          <p>Posture: </p><span id="recapPosture1" class="recapClass"></span>
+          </br>
+          <div id="joueur1Boutons" class="boutonClass" >
+            <img id="attaqueJoueur1" src="img/epee.png" alt="Icone d'attaque" />
+            <img id="defenseJoueur1" src="img/bouclier.png" alt="Icone de défense" />
+          </div>
         </div>
       </div>
-    </div>
 
-    <div id="joueur2" class="joueurClass">
-      <div id="info2" class="infoClass">
-        <h2>Dovakhiin</h2>
-        <p>Santé : </p><span id="recapSante2" class="recapClass"></span>
-        </br>
-        <p>Dégats pouvoir : </p><span id="recapArme2" class="recapClass"></span>
-        </br>
-        <p>Posture: </p><span id="recapPosture2" class="recapClass"></span>
-        </br>
-        <div id="joueur2Boutons" class="boutonClass" style="width: auto;">
-          <img id="attaqueJoueur2" src="img/epee.png" alt="Icone d'attaque" style="width: 50px; margin: 30px;" />
-          <img id="defenseJoueur2" src="img/bouclier.png" alt="Icone de défense" style="width: 50px; margin: 30px;" />
+      <div id="joueur2" class="joueurClass">
+        <div id="info2" class="infoClass">
+          <h2>Dovakhiin</h2>
+          <p>Santé : </p><span id="recapSante2" class="recapClass"></span>
+          </br>
+          <p>Dégats pouvoir : </p><span id="recapArme2" class="recapClass"></span>
+          </br>
+          <p>Posture: </p><span id="recapPosture2" class="recapClass"></span>
+          </br>
+          <div id="joueur2Boutons" class="boutonClass">
+            <img id="attaqueJoueur2" src="img/epee.png" alt="Icone d'attaque" />
+            <img id="defenseJoueur2" src="img/bouclier.png" alt="Icone de défense"/>
+          </div>
         </div>
       </div>
+
     </div>
 
-  </div>
-
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="js/util.js"></script>
-  <script src="js/arme.js"></script>
-  <script src="js/perso.js"></script>
-  <script src="js/map.js"></script>
-  <script src="js/game.js"></script>
-  <script src="js/combat.js"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="js/util.js"></script>
+    <script src="js/arme.js"></script>
+    <script src="js/perso.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/combat.js"></script>
 
 
 </body>
